fix: scrollbar

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,6 @@
 @import 'buttons.css';
 @import 'arrows.css';
 
-
 html, body {
   width: 100%;
   height: 100%;
@@ -21,33 +20,7 @@ html, body {
   display: none;
 }
 
-/* Для WebKit-браузеров (Chrome, Safari) */
-::-webkit-scrollbar {
-  width: 12px; /* Ширина скроллбара */
-  height: 12px; /* Высота горизонтального скроллбара */
-}
-
-::-webkit-scrollbar-track {
-  background: #68A025; /* Цвет фона скроллбара */
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #324C0B; /* Цвет бегунка */
-  border-radius: 10px; /* Скругленные края */
-  border: 3px solid #68A025; /* Пробел между бегунком и скроллбаром */
-}
-
-/* Для Firefox */
 * {
-  scrollbar-width: thin; /* Размер скроллбара: auto, thin, none */
-  scrollbar-color: #324C0B #68A025; /* Цвета бегунка и фона скроллбара */
-}
-
-/* Устанавливаем цвета для горизонтальной прокрутки */
-body {
-  overflow-x: scroll; /* Включаем горизонтальный скролл */
-}
-
-html {
-  scrollbar-color: #324C0B #68A025; /* Цвет бегунка и фона скроллбара */
+  scrollbar-width: thin;
+  scrollbar-color: #324C0B #68A025;
 }
